--- a/Frontend/src/css/home.scss
+++ b/Frontend/src/css/home.scss
@@ -1,6 +1,6 @@
 .banner {
-    height: 700px;
-    background-image: url('./../img/parking-banner.jpg');
+    height: 400px;
+    background-image: url('./../img/background.png');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
